sorted/tests/06-pattern-path.stderr
error: Fmt should sort before Io
  --> $DIR/06-pattern-path.rs:33:20
   |
33 |             Error::Fmt(e) => write!(f, "{}", e),
   |                    ^^^
